# AFT

./: .gitignore  Readme.md  inference.py  pyproject.toml  requirements.txt
configs/: default.yaml
data/: alpaca_eval_v2.json
src/aft/: __init__.py  config.py  net.py  utils.py
src/aft/infer_engine/: api.py  vllm.py
src/aft/module/: basic.py  reform.py  response.py
src/openmoa/: __init__.py  config.py  net.py  openmoa.py  utils.py
src/openmoa/infer_engine/: base_engine.py  vllm.py
src/openmoa/module/: __init__.py  basic.py  response.py
